# jo-git

./: .gitignore  CMakeLists.txt  README.md
include/common/: macros.hpp  singleton.hpp
src/: CMakeLists.txt
src/git/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_singleton.cpp
tests/testutils/: instrumented.hpp
